feat: Add Signout method
